--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,20 @@
 [build]
   command = "npm run build"
   publish = "out"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ./app/api/"
+
+# Exclude API routes from prerendering
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 # Handle client-side routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
+  status = 200
+  
+# Explicitly exclude API routes from static prerendering
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
   status = 200
