--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ yarn-error.log*
 next-env.d.ts
 
 # IDE specific files
-.vscode/
+.vscode/*
+!.vscode/settings.json
 .idea/
 *.code-workspace
 .history/
