--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,10 @@
   publish = "out"
   ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ./app/api/"
 
+# Specify a supported Node.js version
+[build.environment]
+  NODE_VERSION = "18.17.0"
+
 # Exclude API routes from prerendering
 [[plugins]]
   package = "@netlify/plugin-nextjs"
