--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
     "lint": "next lint"
+  },
+  "engines": {
+    "node": ">=16.0.0 <19.0.0"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
