Update README with pronunciation features and fix VS Code settings schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/vscode-settings",
   "css.validate": true,
   "css.lint.unknownAtRules": "ignore",
   "scss.lint.unknownAtRules": "ignore",
